fixed dark mode

--- a/styles/notes.css
+++ b/styles/notes.css
@@ -3,7 +3,7 @@
 @import "tailwindcss/utilities"; */
 html,
 body {
-  height: 100%;
+  height: auto;
   margin: 0;
   padding: 0;
   font-family: var(--font-source-sans-3), sans-serif;
